--- a/Project Euler/Files/Res/Supporting Files/Project Euler-Info.plist
+++ b/Project Euler/Files/Res/Supporting Files/Project Euler-Info.plist
@@ -31,6 +31,8 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
